--- a/frontend/package.json
+++ b/frontend/package.json
@@ -75,7 +75,10 @@
     ]
   },
   "devDependencies": {
-    "@types/jwt-decode": "^3.1.0"
+    "@types/jwt-decode": "^3.1.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16"
   },
   "proxy": "https://pi-mariah-estudio-back.onrender.com"
 }
