--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -45,10 +45,11 @@ uvicorn==0.30.6
 watchfiles==0.24.0
 websockets==12.0
 PyJWT
-passlib
-bcrypt
+passlib[bcrypt]==1.7.5
+bcrypt==4.0.1
 psycopg2-binary
 python-jose
 supabase==2.3.4
+
 
 
