--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,11 +1,20 @@
-version: '3.8'
-
 services:
-  user-management:
+  app:
     build: .
+    container_name: backend-app
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=postgresql://db_estudio_bela_user:dRCC28Iyvz6TqS7gAW48u38H97PqhyKj@dpg-d34ujohr0fns73bl94p0-a.oregon-postgres.render.com/db_estudio_bela
-      - SECRET_KEY=rnd_1niMEvyh72iEGT4gxhMLhFFOIn12
-      - ALGORITHM=HS256
+      - DATABASE_URL=postgresql://user:password@db:5432/prod_db
+    depends_on:
+      - db
+
+  db:
+    image: postgres:15
+    container_name: backend-db
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: prod_db
+    ports:
+      - "5432:5432"
