--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -35,6 +35,7 @@ rich==13.8.0
 shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.34
+sqlalchemy-utils
 starlette==0.38.5
 typer==0.12.5
 typing_extensions==4.12.2
@@ -49,8 +50,8 @@ passlib==1.7.4
 bcrypt==4.0.1
 psycopg2-binary
 python-jose
-supabase==2.3.4
-
-
-
-
+pytest
+pytest-cov
+pytest-asyncio
+coverage
+rich
