--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,5 +1,11 @@
 [pytest]
 markers =
+    item: marcadores para testes de item
+    main: testes relacionados ao módulo main
     auth: marcadores para testes de autenticação
     user: marcadores para testes de usuário
-    item: marcadores para testes de item
+    user_routes: testes relacionados às rotas de usuário
+    auth_routes: testes relacionados às rotas de autenticação
+    auth_service: testes relacionados ao serviço de autenticação
+    user_service: testes relacionados ao serviço de usuário
+
